# PassSimple

./: .gitignore  CLAUDE.md  LICENSE  README.md  build.ps1  build_installer.ps1  check_schema.py  db_inspect.py  pyproject.toml  test_import.csv  test_passwords.csv
installer/: passsimple.nsi
src/: __init__.py  _build_info.py  app.py  bootstrap.py  crypto.py  db.py  generator.py  i18n.py  importer.py  models.py  paths.py
src/db/: __init__.py  connection.py  schema.py  vault.py
src/gui/: csv_import_flow.py  entry_dialog.py  main_window.py  quick_search.py  settings_dialog.py  splash.py  styles.qss  styles_dark.qss  styles_light.qss  title_bar.py  tray.py  utils.py
src/gui/dialogs/: __init__.py  entry_dialog.py  password_generator_dialog.py  settings_dialog.py
src/gui/widgets/: __init__.py  entry_detail_pane.py  entry_list_pane.py  nav_sidebar.py
src/translations/: de.json  en.json
tests/: test_crypto.py  test_db.py  test_generator.py  test_i18n.py  test_importer.py
