[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "passsimple"
version = "0.1.0"
description = "Local-only password manager for Windows, encrypted via DPAPI + AES-GCM"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Luca" }]

dependencies = [
    "PySide6>=6.7",
    "cryptography>=42",
    "pywin32>=306",
]

[project.scripts]
passsimple = "src.app:main"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "black>=24",
    "isort>=5",
    "pyinstaller>=6",
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
